fixed dark mode

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ body.dark-mode .drop-area {
 #renderRequestForm input[type="file"],
 #renderRequestForm textarea {
     width: 100%; /* Set the width to 100% to match other elements */
-    padding: 10px;
+    padding: 15px;
     border: 1px solid #ddd;
     border-radius: 4px;
     margin-bottom: 20px;
